appId: com.finalapp.vibe2
---
- openLink:
    link: fressh:///?fresshE2eDisableAutoConnect=1
- tapOn:
    text: Allow
    optional: true
- extendedWaitUntil:
    visible:
      id: host
    timeout: 30000
- assertVisible:
    id: port
- assertVisible:
    id: username
- assertVisible:
    id: connect
